# donnie

./: donnie.pro
lib/libmpdclient/: libmpdclient-2.11.tar.xz  libmpdclient.spec
lib/libupnp/: baselibs.conf  libupnp.spec  pupnp-release-1.6.21.tar.bz2
lib/libupnpp/: compiler-flags.patch  extra-debug-output.patch  include-functional.patch  increase-logging-level.patch  libupnpp.spec  libupnpp.spec.2  possible-fix-for-crash.patch
lib/libupnpp/tmp/libupnpp-libupnpp-v0.15.2/: .Makefile.am.swp  .gitignore  Makefile.am  README.asc  configure.ac
lib/libupnpp/tmp/libupnpp-libupnpp-v0.15.2/debian/: changelog
lib/libupnpp/tmp/libupnpp-libupnpp-v0.15.2/libupnpp/: ixmlwrap.cxx  ixmlwrap.hxx  soaphelp.hxx  upnpplib.cxx  upnpplib.hxx
lib/libupnpp/tmp/libupnpp-libupnpp-v0.15.2/libupnpp/control/: cdircontent.cxx  cdircontent.hxx  description.cxx  description.hxx  discovery.cxx  discovery.hxx  ohvolume.cxx  service.cxx  service.hxx
lib/libupnpp/tmp/libupnpp-libupnpp-v0.15.2/libupnpp/device/: device.hxx  vdir.cxx
rpm/: donnie.spec
